Fixed issue with footer occluding content and being unable to scroll. I changed the positioning of the <footer>  element to static, and disabled the overflow: hidden; directive in the body clause of our CSS.

--- a/style/main.css
+++ b/style/main.css
@@ -10,7 +10,7 @@
 }
 
 body{
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
  .bookcard-container {
@@ -81,4 +81,3 @@ body{
 .button-container{
   text-align: center;
 }
- 
